--- a/public/stat120/Day7.Rmd
+++ b/public/stat120/Day7.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Day 7: Sampling Distribution and Bootstrap"
+title: "Sampling Distribution and Bootstrap"
 subtitle: "<br/> STAT 120"
 author: "Bastola"
 date: "`r format(Sys.Date(), ' %B %d %Y')`"
@@ -106,7 +106,7 @@ background-size: 160px, 100% 100%
 
 # Statistical Inference
 
-.blockquote-list[.bold[Statistical inference]  is the process of drawing conclusions about the entire population based on information in a sample.]
+.bql.font90[.bold[Statistical inference]  is the process of drawing conclusions about the entire population based on information in a sample.]
 
 <br>
 
@@ -141,36 +141,40 @@ background-size: 160px, 100% 100%
 
 # Statistic and Parameter
 
-.blockquote[
+.bq[
 - A .bold[parameter] is a number that describes some aspect of a population.
 - A .bold[statistic] is a number that is computed from data in a sample.
 ]
 
 <br>
 
-&nbsp; | Parameter | Statistic |
----- | ---- | ---- |
-Mean | $\mu$ | $\bar{x}$ | 
-Proportion | $p$ | $\hat{p}$ |
-Std. Dev. | $\sigma$ | $s$ |
-Correlation | $\rho$ | $r$ |
-Slope | $\beta$ | $b$ |
+&nbsp; | Parameter | Statistic 
+---- | ---- | ---- 
+Mean | $\mu$ | $\bar{x}$ 
+Proportion | $p$ | $\hat{p}$ 
+Std. Dev. | $\sigma$ | $s$ 
+Correlation | $\rho$ | $r$ 
+Slope | $\beta$ | $b$ 
 
 
 ---
-
-class: middle
 
 # Parameter Vs. Statistic
 
 .brown.font120[State whether the quantity described is a .bold[parameter]
 or a .bold[statistic], and give the correct notation.]
 
-.blockquote[
+.bq[
   a. Average household income for all houses in the US, using data from the US census
+] 
+
+--
+
+.bq[
+  b. The proportion of all residents in a county who voted in the last presidential election.]
   
-  b. The proportion of all residents in a county who voted in the last presidential election.
-  
+--
+  .bq[
   c. The difference in proportion who have ever smoked cigarettes, between a sample of 500 people who are 60 years old and a sample of 200 people who are 25 years old.
 ]
 
@@ -178,7 +182,7 @@ or a .bold[statistic], and give the correct notation.]
 
 # A Gallup Poll
 
-.blockquote[
+.bq[
 A random sample of 1527 US adults was contacted in June, 2015
 
 - $p$ = proportion of US adults who would vote for a qualified Muslim presidential candidate
@@ -196,7 +200,7 @@ A random sample of 1527 US adults was contacted in June, 2015
 
 .pull-right[
 <br>
-.blockquote-list[The sample proportion can be used as a “point estimate” of $p$ i.e.,
+.bql[The sample proportion can be used as a “point estimate” of $p$ i.e.,
 $$\hat{p}= 0.60$$]
 ]
 
@@ -209,7 +213,7 @@ class: middle
 
 # Point Estimate (PE)
 
-.blockquote-list[
+.bql[
 - .bold[Point estimate] is a single value constructed from the sample data
 
 - .bold[Sample statistic] can serve as a point estimate  for an unknown parameter
@@ -218,14 +222,35 @@ class: middle
 ---
 
 
+class: action
+
+# <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Your&nbsp;Turn&nbsp;`r (yt <- yt + 1)`</i>    
+
+.pull-left-40[
+![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
+]
+.pull-right-60[
+
+<br>
+<br>
+.bq[
+
+Go to our class [moodle](https://moodle.carleton.edu), go to the in class activity file, skim through your turn 1 and try to answer the questions
+
+]
+]
+
+`r countdown(minutes = 10, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+
+---
+
 # Sampling Distribution
 
-> A .bold[sampling distribution] is the distribution of sample statistics computed for different samples of the same size from the same population.
 
 .pull-left[
 
-<br>
-.blockquote-list[
+
+.bql[A .bold[sampling distribution] is the distribution of sample statistics computed for different samples of the same size from the same population.
 - Sample statistics varies from sample to sample
 - Sampling distribution gives us an idea of the variation
 ]
@@ -233,10 +258,9 @@ class: middle
 
 .pull-right[
 
-<br>
+
 <center>
-<img src="images/sampprop.png" width="60%" height="60%"><br>
-<a>Distribution of 1000 sample proportions with p=0.65</a>
+<img src="images/sampprop.png" width="95%" height="90%"><br>
 </center>
 ]
 
@@ -247,7 +271,7 @@ class: middle
 
 # Center and Shape
 
-.blockquote-list[
+.bql[
 .bold[Center:] If samples are randomly selected, the sampling distribution will be centered around the population parameter.
 
 .bold[Shape:] For most of the statistics we consider, if the sample size is large enough the sampling distribution will be symmetric and bell-shaped.
@@ -255,31 +279,27 @@ class: middle
 
 ---
 
+class: middle
+
 # Standard Error
 
-<br>
-.pull-left[
 
-.blockquote.font90[
+
+.bql.font90[
 Uncertainty in point estimates measured by the .bold[standard error (SE)]
 - The .bold[standard error] of a statistic is the standard deviation of the sampling distribution
 - The .bold[standard error] measures how much the statistic varies from sample to sample
 ]
 
-]
 
-.pull-right[
-![](images/stderror.png)
-
-]
 
 ---
 
 # Recall:  Gettysburg Address
 
-.pull-left[
+.pull-left-40[
 <br>
-.blockquote[
+.bq[
 The standard error for the average word size in a random sample of 10 words is closest to
 
 a. 0.5
@@ -293,37 +313,37 @@ d. 1.5
 ]
 
 
-.pull-right[
-![Sampling Distribution](images/stderror.png)
-
+.pull-right-60[
+<center>
+<img src="images/stderror.png" width="90%" height="90%"><br>
+</center>
 ]
 
 ---
 
 
-# Recall:  Gettysburg Address
-
-.yellow-h[What are each dots?]
+# Gettysburg Address: What are each dots?
 
 <center>
-<img src="images/gettys.png" width="50%" height="45%"><br>
+<img src="images/gettys.png" width="50%" height="30%" style="max-width:100%; max-height:30%; object-fit: cover;"><br>
 </center>
-
 
 ---
 
 # Sample Size Matters!
 
 
-.pull-left[
-![](images/variability.png)
+.pull-left-60[
+<center>
+<img src="images/variability.png" width="90%" height="90%"><br>
+</center>
 
 ]
 
-.pull-right[
+.pull-right-40[
 <br>
-<br>
-.blockquote[
+
+.bq[
 Which sampling distribution corresponds to a larger sample size?
 - A
 - B
@@ -335,13 +355,15 @@ Which sampling distribution corresponds to a larger sample size?
 
 # Sample Size Matters!
 
-.pull-left[
-![](images/variability.png)
+.pull-left-60[
+<center>
+<img src="images/variability.png" width="90%" height="90%"><br>
+</center>
 ]
-.pull-right[
+.pull-right-40[
 <br>
-<br>
-.blockquote[
+
+.bq.font90[
 - As the sample size increases, the variability (SE) of the sample statistics tends to decrease.
 - Smaller SE means the sample statistics tend to be closer to the true population parameter value! 
 ]
@@ -349,15 +371,22 @@ Which sampling distribution corresponds to a larger sample size?
 
 ---
 
-class: middle
 
 # Other Factors
 
-What else affects the standard error of a statistic?
+.green-h[
+Q. What else affects the standard error of a statistic?]
+--
 
-.blue[The variability of the population!]
+.blue-h[A. .blue[The variability of the population!]]
 
-.blockquote[
+<br>
+
+--
+
+<br>
+
+.bq[
 - .bold[Quantitative variable:] the larger the population standard deviation, the larger the standard error of a statistic (like a mean)
 
 - .bold[Categorical variable:] the closer the population proportion is to 0.5, the larger the standard error of the sample proportion
@@ -371,14 +400,30 @@ class: middle
 
 .red.bold[Do not confuse sample size and simulation size !!]
 
-.blockquote-list[
+.pull-left[
+.bql[
 .bold.blue[Sample size (n)] = how many individuals are in the sample used to compute our stat?
 
-- The SE of your stat gets smaller as $n$ get bigger.
+]
 
+]
+
+
+
+.pull-right[
+
+.bql[
 .bold.blue[Simulation size (N)] = how many random samples did we take from the population to simulate the sampling distribution of our stat?
 
+
+]
+
+]
+
+.bq[
+- The SE of your stat gets smaller as $n$ get bigger.
 - Once you’ve simulated a couple $100$ samples, the shape/center/spread of the sampling distribution should remain about the same as you increase the simulation size.
+
 
 ]
 
@@ -386,10 +431,10 @@ class: middle
 
 class: middle
 
-# Further Examples
+# Further Examples: Statistics Grad Schools
 
 .pull-left[
-.blockquote[What does each dot represent?
+.bq[What does each dot represent?
 
   a. Enrollment at one statistics grad program
 
@@ -414,7 +459,7 @@ class: middle
 # Population Mean
 
 .pull-left[
-.blockquote[
+.bq[
 The sampling distribution is shown for enrollment in statistics grad schools.  The population parameter is closest to:
 
 a. 45 
@@ -443,7 +488,7 @@ class: middle
 
 .pull-left[
 
-.blockquote[
+.bq[
 The sampling distribution is shown for enrollment in statistics grad schools. The .bold[standard error] is closest to:
 
   a. 5  
@@ -468,7 +513,7 @@ The sampling distribution is shown for enrollment in statistics grad schools. Th
 
 # Random Vs. Non-random
 
-.blockquote.font90[Samples of .bold[size] 5 are taken from a large population with .bold[population mean] 8, and the sampling distributions for the sample means are shown.  Dataset A (top) and Dataset B (bottom) were collected using different sampling methods.  Which dataset (A or B) used .bold[random sampling]?]
+.bq.font80[Samples of .bold[size] 5 are taken from a large population with .bold[population mean] 8, and the sampling distributions for the sample means are shown.  Dataset A (top) and Dataset B (bottom) were collected using different sampling methods.  Which dataset (A or B) used .bold[random sampling]?]
 
 <center>
 <img src="images/stackeddata.png" width="50%" height="50%"><br>
@@ -483,7 +528,7 @@ The sampling distribution is shown for enrollment in statistics grad schools. Th
 - .bold[Bootstrap:] Sample with replacement from the original sample, using the same sample size.
 
 <center>
-<img src="images/bootsample.png" width="50%" height="50%"><br>
+<img src="images/bootsample.png" width="75%" height="70%"><br>
 <a>Original sample (left) to bootstrap sample (right)</a>
 </center>
 
@@ -493,7 +538,7 @@ The sampling distribution is shown for enrollment in statistics grad schools. Th
 # Bootstrap 
 
 <center>
-<img src="images/bootinf.png" width="50%" height="50%"><br>
+<img src="images/bootinf.png" width="60%" height="50%"><br>
 <a>Original sample (left) to population (right)</a>
 </center>
 
@@ -504,16 +549,18 @@ The sampling distribution is shown for enrollment in statistics grad schools. Th
 
 # Bootstrap Sampling in R
 
-.blockquote[
+.bq[
 - resample a set of observations with replacement
 
 - same data points can appear multiple times
 ]
 
-&nbsp; | Data | Statistic |
----- | ---- | ---- |
-Original sample | $x_1, x_2, ..., x_n$ | $\bar{x}_n$ | 
-Resample  | $x_1^*, x_2^*, ..., x_n^*$ | $\bar{x}^*_n$|
+<br>
+
+&nbsp; | Data | Statistic 
+---- | ---- | 
+Original sample | $x_1, x_2, ..., x_n$ | $\bar{x}_n$ 
+Resample  | $x_1^*, x_2^*, ..., x_n^*$ | $\bar{x}^*_n$
 
 ```{r, eval=FALSE}
 # R-code
@@ -526,7 +573,7 @@ class: middle
 
 # Bootstrap Steps
 
-.blockquote.font90[
+.bq.font90[
 1. Generate a bootstrap sample.
 
 2. Compute the statistic of interest for your bootstrap sample.
@@ -545,7 +592,7 @@ class: middle
 
 <br>
 
-.blockquote[
+.bq[
 Suppose $X = \{20, 24, 19, 23, 22, 16\}$
 \begin{align*}
             X_1^* &= \{16, 19, 16 ,23 ,22, 24\}\\
@@ -557,7 +604,7 @@ Suppose $X = \{20, 24, 19, 23, 22, 16\}$
 \end{align*}
 
 
-N = total number of simulations/samples
+.yellow-h[N = total number of resamples/simulations/samples]
 
 ]
 ]
@@ -579,11 +626,11 @@ class: action
 
 <br>
 <br>
-.blockquote[
+.bq[
 
-Go to our class [moodle](https://moodle.carleton.edu), go to the in class activity file, skim through and try to answer the questions
+Please go through the remainder of the class activity file and try to answer the questions
 
 ]
 ]
 
-`r countdown(minutes = 5, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+`r countdown(minutes = 10, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
